--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,14 @@
       margin: 0;
       font-family: 'Playfair Display', serif;
     }
-
+    .slim {
+      background-color: black;
+      color: white;
+      padding: 10px 20px;
+      font-family: arial, bold;
+      font-weight: bold;
+      font-size: 16px;
+    }
     header {
       display: flex;
       justify-content: space-between;
