--- a/template/index.html
+++ b/template/index.html
@@ -118,6 +118,9 @@
 
 
 
+  <div class="container">
+    <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
+      </div>
 
 
 
